# rl-project

./: .gitignore  Makefile  README.md  pyproject.toml
configs/eval/: gsm8k_baseline.json
configs/experiments/: gsm8k_qwen0_5b_full.json  gsm8k_qwen0_5b_test.json  gsm8k_qwen1_5b_full.json  gsm8k_qwen1_5b_grpo.json  gsm8k_qwen1_5b_grpo_gs2.json  gsm8k_qwen1_5b_grpo_gs4.json  gsm8k_qwen1_5b_grpo_gs8.json  gsm8k_qwen1_5b_test.json  gsm8k_qwen2_5_math1_5b_ref.json
configs/model/: qwen2_5_0_5b_instruct.json
configs/train/: dpo_small.json  grpo_lite_8gb.json  grpo_smoke.json
docs/: experiment_design.md  pipeline.md  project_plan.md  server_setup.md
scripts/: build_dpo_pairs.py  common.sh  evaluate_model.py  evaluate_predictions.py  inspect_gsm8k.py  plot_training_dashboard.py  plot_training_rewards.py  run_baseline_3070.sh  run_baseline_smoke.sh  run_dpo_smoke.sh  run_dpo_train.py  run_experiment.py  run_grpo_smoke.py  run_grpo_train.py  run_gsm8k_baseline.py  run_pipeline_smoke.sh  run_ppo_train.py  summarize_results.py
scripts/analysis/: package_results.sh  plot_training_dashboard.py  plot_training_rewards.py  summarize_results.py
scripts/experiments/: run_experiment.py  run_grpo_group_sweep.sh  run_make_targets.sh
scripts/train/: build_dpo_pairs.py  run_dpo_train.py  run_grpo_train.py
src/grpo_reasoning/algorithms/: __init__.py  grpo.py
src/grpo_reasoning/data/: gsm8k.py
src/grpo_reasoning/evaluation/: answer_extraction.py  metrics.py
src/grpo_reasoning/models/: loading.py
src/grpo_reasoning/rewards/: gsm8k_reward.py
src/grpo_reasoning/training/: __init__.py  dpo.py  grpo.py  ppo.py
src/reasoning_post_training/: __init__.py  experiments.py  runtime.py
src/reasoning_post_training/datasets/: gsm8k.py
src/reasoning_post_training/evaluation/: answer_extraction.py  metrics.py
tests/: test_answer_extraction.py  test_baseline_eval.py  test_build_dpo_pairs.py  test_grpo.py  test_gsm8k_dataset.py  test_metrics.py  test_training_dpo.py  test_training_grpo.py  test_training_ppo.py
(+5 files in other folders)
