[project]
name = "grpo-reasoning"
version = "0.1.0"
description = "EECS E6892 project: GRPO for small language model reasoning."
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "numpy",
    "torch",
    "tqdm",
    "transformers",
    "trl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

