[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grpo-reasoning"
version = "0.1.0"
description = "EECS E6892 project: GRPO for small language model reasoning."
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "numpy",
    "torch",
    "tqdm",
    "transformers",
    "trl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
quantization = [
    "bitsandbytes",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
