[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-post-training"
version = "0.1.0"
description = "EECS E6892 project: PPO, DPO, and GRPO post-training for reasoning."
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "evaluate",
    "huggingface-hub>=1.11.0",
    "matplotlib",
    "numpy",
    "peft",
    "torch",
    "tqdm",
    "transformers",
    "trl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
quantization = [
    "bitsandbytes",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
